; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_recv_get_first_empty_buf.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_recv_get_first_empty_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }
%struct.TYPE_7__ = type { i64 }

@context = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@qe = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_7__* ()* @recv_get_first_empty_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_7__* @recv_get_first_empty_buf() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_7__*, align 8
  store i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @context, i32 0, i32 0), i32** %1, align 8
  %3 = call %struct.TYPE_7__* @STAILQ_FIRST(i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @context, i32 0, i32 0))
  store %struct.TYPE_7__* %3, %struct.TYPE_7__** %2, align 8
  br label %4

4:                                                ; preds = %14, %0
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %6 = icmp ne %struct.TYPE_7__* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %4
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %10, 0
  br label %12

12:                                               ; preds = %7, %4
  %13 = phi i1 [ false, %4 ], [ %11, %7 ]
  br i1 %13, label %14, label %18

14:                                               ; preds = %12
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %16 = load i32, i32* @qe, align 4
  %17 = call %struct.TYPE_7__* @STAILQ_NEXT(%struct.TYPE_7__* %15, i32 %16)
  store %struct.TYPE_7__* %17, %struct.TYPE_7__** %2, align 8
  br label %4

18:                                               ; preds = %12
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  ret %struct.TYPE_7__* %19
}

declare dso_local %struct.TYPE_7__* @STAILQ_FIRST(i32*) #1

declare dso_local %struct.TYPE_7__* @STAILQ_NEXT(%struct.TYPE_7__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
